# water-dp

./: .env.example  .gitignore  CHANGES.md  README.md  docker-compose.loadtest.yml  docker-compose.podman.yml  docker-compose.tsm.podman.yml  docker-compose.tsm.yml  docker-compose.yml  run_with_tsm.sh
api/: Dockerfile  pyproject.toml  pytest.ini  start_server.py
api/alembic/: env.py
api/alembic/versions/: a3f2c1d8e9b4_add_rbac_project_members.py  b5f3d2e7a1c9_add_alert_sensor_datastream_columns.py  cd8e54781c5d_add_sensor_activity_configs.py  d89d8f0ea294_initial_schema_water_dp.py
api/app/: main.py  sync_project_views.py
api/app/api/: deps.py
api/app/computations/: context.py
api/app/core/: celery_app.py  config.py  database.py  logging_config.py  middleware.py  rate_limit.py  security.py  seeding.py
api/app/models/: __init__.py  base.py  geospatial.py  layer_assignment.py  sensor_activity.py  user_context.py
api/app/schemas/: auth.py  computation.py  qaqc.py  rbac.py  sensor.py  sms.py  user_context.py
api/app/services/: alert_evaluator.py  async_thing_service.py  database_service.py  dataset_service.py  geoserver_service.py  ingestion_service.py  keycloak_service.py  minio_service.py  monitoring_service.py  project_service.py  qaqc_service.py  rbac_service.py  simulator_service.py  sms_service.py  thing_service.py
api/app/tasks/: monitoring_tasks.py  simulation_tasks.py
api/app/utils/: storage.py
api/app/worker/: mqtt_handler.py
api/scripts/: run_migrations.py  seed_data.py  seed_keycloak.py  setup_keycloak.py  start.sh
api/tests/: conftest.py
api/tests/load/: README.md  locustfile.py
api/tests/test_api/: test_alerts.py  test_bulk.py  test_computations_v2.py  test_dashboards.py  test_geospatial_api.py  test_groups.py  (+4 more)
(+231 files in other folders)
