[tool.poetry]
name = "water-dp"
version = "0.1.0"
description = "Water Data Platform backend (FastAPI + SQLAlchemy) with GeoServer and time series support."
authors = ["Your Name <you@example.com>"]
license = "MIT"
packages = [
  { include = "app" },
  { include = "scripts" }
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "==0.115.14"
uvicorn = { version = "==0.30.6", extras = ["standard"] }
gunicorn = "==22.0.0"
sqlalchemy = "==2.0.45"
psycopg2-binary = "==2.9.11"
alembic = "==1.18.0"
pydantic = "==2.12.5"
pydantic-settings = "==2.12.0"
structlog = "==24.4.0"
prometheus-client = "==0.20.0"
pandas = "==2.3.3"
numpy = "==1.26.4"
pytz = "==2024.2"
requests = "==2.32.5"
PyJWT = {extras = ["crypto"], version = "==2.12.1"}
httpx = "==0.28.1"
python-multipart = "==0.0.9"
python-dotenv = "==1.2.1"
geoalchemy2 = "==0.14.7"
shapely = "==2.1.2"
asyncpg = "==0.31.0"
celery = "==5.6.2"
redis = "==7.1.0"
python-keycloak = "==4.7.3"
paho-mqtt = "==2.1.0"
slowapi = "==0.1.9"
minio = "==7.2.20"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.0"
mypy = "^1.9.0"
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
pytest-asyncio = "^0.23.0"
ruff = "^0.4.0"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = []
extend-ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app", "scripts"]


[tool.poetry.scripts]
start-server = "start_server:start_server"
run-migrations = "scripts.run_migrations:main"
fix = "scripts.fix_code:main"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"


